# scrape_ufcstats

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  scrape.sh
.devcontainer/: Dockerfile  devcontainer.json
data/: events.csv  events.json
jupyter_notebooks/: 0.0-jmk-prefect_playground.ipynb  0.0-jmk-scratch.ipynb  1.0-jmk-transfer_data.ipynb  1.0-postgres_db_io.ipynb
notebooks/: 0.0-jmk-prefect_playground.ipynb
scrapy_ufcstats/: -  environment.yml  scrapy.cfg
scrapy_ufcstats/scrapy_ufcstats/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_ufcstats/scrapy_ufcstats/spiders/: events_spider.py  fights_spider.py
src/data/: io.py
